vendor/pin-project-1.0.7/tests/ui/unstable-features/marker_trait_attr.stderr
error[E0119]: conflicting implementations of trait `std::marker::Unpin` for type `Struct<_>`
  --> $DIR/marker_trait_attr.rs:13:1
   |
13 | #[pin_project] //~ ERROR E0119
   | ^^^^^^^^^^^^^^ conflicting implementation for `Struct<_>`
...
20 | impl<T> Unpin for Struct<T> {}
   | --------------------------- first implementation here
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
